--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta property="og:title" content="Jadlions Website">
+  <meta property="og:description" content="Nothing, just jadlion website">
+  <meta property="og:url" content="http://jadlions.me">
+  <meta property="og:image" content="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
+</head>
 <body>
 
 <h3>hello</h3>
