--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Jadlion</title>
   <meta property="og:title" content="Jadlions Website">
   <meta property="og:description" content="Nothing, just jadlion website">
   <meta property="og:url" content="http://jadlions.me">
