--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Jadlion</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:title" content="Jadlions Website">
   <meta property="og:description" content="Nothing, just jadlion website">
   <meta property="og:type" content="website">
