--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://jadlions.me">
   <meta property="og:image" content="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
-  <meta name="theme-color" content="#0000FF">
+  <meta name="theme-color" content="#00ff11">
 </head>
 <body>
 
