--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jadlion</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:title" content="Jadlions Website">
-  <meta property="og:description" content="Nothing, just jadlion website">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://jadlions.me">
-  <meta property="og:image" content="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
-  <meta name="theme-color" content="#00ff11">
+	<link rel="shortcut icon" type="image/x-icon" href="img/pfp.jpg">
+    <title>Jadlion</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Jadlions Website">
+    <meta property="og:description" content="Nothing, just jadlion website">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://jadlions.me">
+    <meta property="og:image" content="http://jadlions.me/img/pfp.jpg">
+    <link rel="stylesheet" href="style.css">
+  	<meta name="theme-color" content="#00ff11">
+  	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
-
-<h3>hello</h3>
-<p>https://github.com/JadlionHD</p>
-
+	<div class="box">
+		<img src="img/pfp.jpg" alt="" class="box-img">
+		<h1>JadlionHD</h1>
+		<h4>Back End Developer</h4>
+		<p>Nothing, what did you want to search huh? I may making a random stuff on javascript or even others</p>		
+		<ul>
+			<li><a href="https://discord.gg/zCr2jeZ"><i class="fab fa-discord" style='font-size:35px'></i></a></li>
+			<li><a href="https://www.youtube.com/channel/UCrXvTWmb2AnWGKPCsFIn1_A"><i class="fab fa-youtube" style='font-size:35px'></i></a></li>
+			<li><a href="https://instagram.com/jadlionhd" target="blank"><i class="fab fa-instagram" style='font-size:35px'></i></a></li>
+			<li><a href="https://github.com/JadlionHD" target="blank"><i class="fab fa-github" style='font-size:35px'></i></a></li>
+		</ul>
+	</div>
 </body>
 </html>
