--- a/osu/skin/index.html
+++ b/osu/skin/index.html
@@ -9,11 +9,12 @@
 	    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	    <meta property="og:title" content="Jadlion Web">
-	    <meta property="og:description" content="Just a osu!mania skins">
-	    <meta property="og:url" content="http://jadlions.me">
-	    <meta property="og:image" content="http://jadmaid.xyz/images/maika.jpg">
-		  <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1T5nZJ7JMnFU9ORFuFz477oKoUs4RDKF4/view">
+    	    <meta property="og:title" content="Jadlions Website">
+    	    <meta property="og:description" content="Nothing, just osu!mania skin that i use lol">
+   	    <meta property="og:url" content="http://jadlions.me">
+   	    <meta property="og:image" content="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
+  	    <meta name="theme-color" content="#00ff11">
+	   <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1T5nZJ7JMnFU9ORFuFz477oKoUs4RDKF4/view">
    </head>
     <body>
     </body>
