--- a/osu/skin/index.html
+++ b/osu/skin/index.html
@@ -5,8 +5,9 @@
 	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	    <link rel="shortcut icon" type="image/x-icon" href="images/maika.jpg">
-	    <title>JadMaid Discord Bot</title>
+	    <title>JadlionHD</title>
 	    <link rel="stylesheet" type="text/css" href="css/style.css">
+	    <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
 
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	    <meta property="og:title" content="Jadlions Website">
