--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4">
     <link rel="stylesheet" href="style.css">
   	<meta name="theme-color" content="#00ff11">
-  	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
 	<div class="box">
@@ -19,10 +19,10 @@
 		<h4>Back End Developer</h4>
 		<p>Nothing, what did you want to search huh? I may making a random stuff on javascript or even others</p>		
 		<ul>
-			<li><a href="https://discord.gg/zCr2jeZ"><i class="fab fa-discord" style='font-size:35px'></i></a></li>
-			<li><a href="https://www.youtube.com/channel/UCrXvTWmb2AnWGKPCsFIn1_A"><i class="fab fa-youtube" style='font-size:35px'></i></a></li>
-			<li><a href="https://instagram.com/jadlionhd" target="blank"><i class="fab fa-instagram" style='font-size:35px'></i></a></li>
-			<li><a href="https://github.com/JadlionHD" target="blank"><i class="fab fa-github" style='font-size:35px'></i></a></li>
+			<li><a href="https://discord.gg/zCr2jeZ"><i class="bi bi-discord" style='font-size:35px'></i></a></li>
+			<li><a href="https://www.youtube.com/channel/UCrXvTWmb2AnWGKPCsFIn1_A"><i class="bi bi-youtube" style='font-size:35px'></i></a></li>
+			<li><a href="https://instagram.com/jadlionhd" target="blank"><i class="bi bi-instagram" style='font-size:35px'></i></a></li>
+			<li><a href="https://github.com/JadlionHD" target="blank"><i class="bi bi-github" style='font-size:35px'></i></a></li>
 		</ul>
 	</div>
 </body>
