--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<img src="https://avatars3.githubusercontent.com/u/48410066?s=460&u=4974cc49a74c8d4aef5988174bf72a3b7a4427ac&v=4" alt="" class="box-img">
 		<h1>JadlionHD</h1>
 		<h4>Back End Developer</h4>
-		<p>Nothing, what did you want to search huh? I may making a random stuff on javascript or even others</p>		
+		<p>Nothing, what did you want to search huh? I only making a random stuff on javascript</p>		
 		<ul>
 			<li><a href="https://discord.gg/zCr2jeZ"><i class="bi bi-discord" style='font-size:35px'></i></a></li>
 			<li><a href="https://www.youtube.com/channel/UCrXvTWmb2AnWGKPCsFIn1_A"><i class="bi bi-youtube" style='font-size:35px'></i></a></li>
